--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ img.emoji {
   <div class="container">
     <div class="row">
       <div class="col-md-10">
-        <h2 class="wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">Visit Kathmandu</h2>
+        <h2 class="wow fadeInUp visitKathmanduTitle" data-wow-duration="1000ms" data-wow-delay="300ms">Visit Kathmandu</h2>
       </div>
     </div>
     <div class="row 2col">
