--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ img.emoji {
   </div>
 </section>
 <!--/#Contact Us-->
-<section id="social-icons-container"> <a href="http://www.facebook.com/photoktm" target="_blank"><img src="/images/facebook.png" alt="Facebook" title="Facebook"></a> <a href="http://www.twitter.com/photoktm" target="_blank"><img src="/images/twitter.png" alt="Twitter" title="Twitter"></a> <a href="http://www.instagram.com/photoktm" target="_blank"><img src="/images/instagram.png" alt="Instagram" title="Instagram"></a> </section>
+<section id="social-icons-container"> <a href="http://www.facebook.com/photoktm" target="_blank"><img src="/images/facebook.png" alt="Facebook" title="Facebook"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.twitter.com/photoktm" target="_blank"><img src="/images/twitter.png" alt="Twitter" title="Twitter"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.instagram.com/photoktm" target="_blank"><img src="/images/instagram.png" alt="Instagram" title="Instagram"></a> </section>
 
     </div><!-- .site-content -->
 
