--- a/index.html
+++ b/index.html
@@ -150,24 +150,31 @@ img.emoji {
     </div>
     <div class="row 2col">
       <div class="col-md-6 col-left wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="600ms">
-        <p>Photo Kathmandu invites photographers, curators, photo-based artists, historians, anthropologists and other practitioners working with photography to submit their works for digital projections. Works should relate to the theme of TIME. Works can be archival, contemporary, or mixed. Mix-media works are also welcome. The festival curatorial team will review the submitted works and contact the submitters with questions or proposals. </p>
+        <p>Photo Kathmandu invites photographers, curators, photo-based artists, historians, anthropologists and other practitioners working with photography to submit their works and ideas for digital projections, talks, discussions, performances etc. Works should relate to the theme of TIME. Works can be archival, contemporary, or mixed. Mix-media works are also welcome. The festival curatorial team will review the submitted works/ideas and contact the submitters with questions or proposals.</p>
         <h3>General information:</h3>
         <ul class="bullet-list">
           <li>Submissions are free. </li>
           <li>Submissions are open to all ages and nationalities. </li>
-          <li> Submissions should be a cohesive body of work including minimum 15 images. There is no limit to maximum number of images at this stage. </li>
-          <li> Multimedia submissions should be maximum 15 minutes in length and can be submitted as a Vimeo, YouTube or equivalent link. </li>
+          <li> Photo submissions should be a cohesive body of work including minimum 15 images. There is no limit to maximum number of images at this stage.</li>
+          <li> Multimedia submissions should be maximum 15 minutes in length and can be submitted as a Vimeo, YouTube or equivalent link.</li>
           <li> Single images will not be accepted. </li>
-          <li> Submissions close on 1st September 2015. </li>
+          <li> Submissions close on <u>1st September 2015</u>. </li>
         </ul>
       </div>
       <div class="col-md-6 col-right wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="700ms">
         <h3>To submit, please send us a folder that includes:</h3>
+        <p><strong>For photographers:</strong></p>
         <ol>
           <li>Image files renamed as your firstname_lastname_01.jpg eg; john_doe_01.jpg. Images should be 800 pixels on the longest side with caption/text included in file info. </li>
           <li>An introduction or artist statement in English not exceeding 1000 words. </li>
           <li>A short bio of of the individual or information about the submitting institution not exceeding 300 words. </li>
           <li>Please zip the folder, name it your firstname_lastname and email to <a href="mailto:submissions@photoktm.com">submissions@photoktm.com</a> with subject line: Submission - Firstname Lastname</li>
+        </ol>
+        
+        <p><strong>For curators, historians, anthropologist and other professionals working with photography:</strong></p>
+        <ol>
+          <li>A curatorial statement or concept outline not more than 500 words describing your approach and idea for the projection, talk, discussion, workshop. The festival curatorial team will ask you for a budget and other details if we like your idea! If you have a potential funding source already identified, please mention this in your curatorial statement.</li>
+          <li>A list of works, artists or resource persons whom you would like to include.</li>
         </ol>
       </div>
     </div>
