Addition to Submit section
Added a point under Submit section.

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@ img.emoji {
           <li> Photo submissions should be a cohesive body of work including minimum 15 images. There is no limit to maximum number of images at this stage.</li>
           <li> Multimedia submissions should be maximum 15 minutes in length and can be submitted as a Vimeo, YouTube or equivalent link.</li>
           <li> Single images will not be accepted. </li>
+          <li> Submissions for digital projections do not need to relate to Nepal. They can be from anywhere in the world. They just need to relate to the theme of <i>TIME</i>.</li>
           <li> Submissions close on <u>1st September 2015</u>. </li>
         </ul>
       </div>
