change of submission deadline

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ img.emoji {
           <li> Multimedia submissions should be maximum 15 minutes in length and can be submitted as a Vimeo, YouTube or equivalent link.</li>
           <li> Single images will not be accepted. </li>
           <li> Submissions for digital projections do not need to relate to Nepal. They can be from anywhere in the world. They just need to relate to the theme of <i>TIME</i>.</li>
-          <li> Submissions close on <u>1st September 2015</u>. </li>
+          <li> Submissions close on <u>15 September 2015</u>. </li>
         </ul>
       </div>
       <div class="col-md-6 col-right wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="700ms">
