Added PRESS link on menu and link at the bottom
don’t know if it works.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ img.emoji {
           <li class="scroll"><a href="#submit">SUBMIT</a></li>
           <li class="scroll"><a href="#visit-kathmandu">VISIT KATHMANDU</a></li>
           <li class="scroll"><a href="#support">SUPPORT</a></li>
+          <li class="scroll"><a href="#press">PRESS</a></li>
           <li class="scroll"><a href="#contact-us">CONTACT</a></li>
         </ul>
       </div>
@@ -232,12 +233,42 @@ img.emoji {
       </div>
       <div class="col-md-6 col-right wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="700ms">
         <h3>ABOUT KATHMANDU VALLEY PRESERVATION TRUST</h3>
-        <p> The Kathmandu Valley Preservation Trust (KVPT) was founded in 1991 with the mission to safeguard the extraordinary and threatened architectural heritage of the Kathmandu Valley in Nepal. Over the past two decades, KVPT has saved over 50 historic buildings including temples, step-wells, monasteries, palaces, and homes, and has launched three major campaigns for preservation on an urban scale. KVPT collaborates with community groups, local and international specialists, educational institutions, and the Department of Archaeology of the Government of Nepal. Restoration and conservation operations have initiated key research and training programs, and the KVPT office in Patan Darbar Square has become a resource center for architecture and urbanism in
-          Nepal. </p>
+        <p> The Kathmandu Valley Preservation Trust (KVPT) was founded in 1991 with the mission to safeguard the extraordinary and threatened architectural heritage of the Kathmandu Valley in Nepal. Over the past two decades, KVPT has saved over 50 historic buildings including temples, step-wells, monasteries, palaces, and homes, and has launched three major campaigns for preservation on an urban scale. KVPT collaborates with community groups, local and international specialists, educational institutions, and the Department of Archaeology of the Government of Nepal. Restoration and conservation operations have initiated key research and training programs, and the KVPT office in Patan Darbar Square has become a resource center for architecture and urbanism in Nepal.</p>
       </div>
     </div>
   </div>
 </section>
+
+<!-- /.submit-form -->
+<div id="press" class="section parallax-img parallax-window" data-positionY="0px" data-parallax="scroll" data-iosFix="true" data-image-src="/images/photographers.jpg" data-naturalHeight="auto" title="Press Photographers. Photo: Bikas Rauniar Collection/Nepal Picture Library"></div>
+<!-- /.parallax-img -->
+<section class="parallax white-bg">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10">
+        <h2 class="wow fadeInUp visitKathmanduTitle" data-wow-duration="1000ms" data-wow-delay="300ms">Press</h2>
+      </div>
+    </div>
+    <div class="row 2col">
+      <div class="col-md-6 col-left wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="600ms">
+        <p>Please download the press release in various languages.</p>
+        <h3>Download</h3>
+        <p><a href="https://drive.google.com/open?id=0Bw6qAXTeupXmc1JJX0lXQk9DOVU">English</a><br>
+          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmRy1uX19EZVBYajA">Nepali</a><br>
+          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmbGthZndQNFp3YTg">Chinese</a><br>
+          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmRUhTNkVmWjd4VEU">French</a><br>
+          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmcFRyVVhtOC1PeEE">Japanese</a><br>
+          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmWXJ3T0RQX0lKbmc">Spanish</a></p>
+      </div>
+      
+    </div>
+    <!-- /.row -->
+  </div>
+  <!-- /.container -->
+</section>
+<!--/#visit-kathmandu -->
+
+
 <section id="contact-us" class="white-bg">
   <div id="google-map" class="wow fadeIn" data-latitude="27.68054" data-longitude="85.310415" data-wow-duration="1000ms" data-wow-delay="400ms"> </div>
   <div class="container">
@@ -308,4 +339,3 @@ var screenReaderText = {"expand":"<span class=\"screen-reader-text\">expand chil
 </script>
 </body>
 </html>
-
