German press release added

--- a/index.html
+++ b/index.html
@@ -258,7 +258,8 @@ img.emoji {
           <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmbGthZndQNFp3YTg">Chinese</a><br>
           <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmRUhTNkVmWjd4VEU">French</a><br>
           <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmcFRyVVhtOC1PeEE">Japanese</a><br>
-          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmWXJ3T0RQX0lKbmc">Spanish</a></p>
+          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmWXJ3T0RQX0lKbmc">Spanish</a><br>
+          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmTlZkUk52NExpSmM">German</a></p>
       </div>
       
     </div>
