--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ img.emoji {
           <li class="scroll"><a href="#visit-kathmandu">VISIT KATHMANDU</a></li>
           <li class="scroll"><a href="#support">SUPPORT</a></li>
           <li class="scroll"><a href="#press">PRESS</a></li>
+          <li class="scroll"><a href="http://blog.photktm.com" target="_blank">BLOG</a></li>
           <li class="scroll"><a href="#contact-us">CONTACT</a></li>
         </ul>
       </div>
