change to press section

--- a/index.html
+++ b/index.html
@@ -254,13 +254,13 @@ img.emoji {
       <div class="col-md-6 col-left wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="600ms">
         <p>Please download the press release in various languages.</p>
         <h3>Download</h3>
-        <p><a href="https://drive.google.com/open?id=0Bw6qAXTeupXmc1JJX0lXQk9DOVU">English</a><br>
-          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmRy1uX19EZVBYajA">Nepali</a><br>
-          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmbGthZndQNFp3YTg">Chinese</a><br>
-          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmRUhTNkVmWjd4VEU">French</a><br>
-          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmcFRyVVhtOC1PeEE">Japanese</a><br>
-          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmWXJ3T0RQX0lKbmc">Spanish</a><br>
-          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmTlZkUk52NExpSmM">German</a></p>
+        <p><a href="https://drive.google.com/open?id=0Bw6qAXTeupXmcUNSMzJod0Z4Yms" target="_blank">English</a><br>
+          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmbGVqdkpaWGx2M28" target="_blank">Nepali</a><br>
+          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmQmlKZnlKbk4tY3c" target="_blank">Chinese</a><br>
+          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmVGZ4MXNMVjdvckE" target="_blank">French</a><br>
+          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmUWRkaFRGNHI3Wnc" target="_blank">Japanese</a><br>
+          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmckZwN2RCNlh0ZU0" target="_blank">Spanish</a><br>
+          <a href="https://drive.google.com/open?id=0Bw6qAXTeupXmTlZkUk52NExpSmM" target="_blank">German</a></p>
       </div>
       
     </div>
